[metadata]
name = plover_retro_everything
version = 0.0.2
description = Surround words you previously typed with arbitrary translations, allowing you to turn most mode-switching plugin into a retro-plugin!
author = ElKowar
license = MIT
url = https://github.com/elkowar/plover_retro_everything
keywords = plover_plugin plover

[options]
zip_safe = True
include_package_data = True
install_requires =
    plover>=4.0.0.dev6
packages = 
    plover_retro_everything

[options.entry_points]
plover.macro =
    retro_everything = plover_retro_everything:retro_everything
